fixed grid size on small screens, amended EventCard so hours show correctly

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -25,7 +25,6 @@
 .eventsGrid {
   display: grid;
   gap: 1rem;
-  grid-auto-rows: 180px;
   }
 
 @media (min-width: 700px) {
